--- a/job-tracker/pom.xml
+++ b/job-tracker/pom.xml
@@ -18,6 +18,7 @@
         <java.version>24</java.version>
         <mysql-driver.version>9.3.0</mysql-driver.version>
         <google-protobuf.version>4.29.0</google-protobuf.version>
+        <project-lombok.version>1.18.38</project-lombok.version>
     </properties>
 
     <dependencies>
@@ -32,6 +33,13 @@
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-security</artifactId>
+        </dependency>
+
+        <!-- Project Lombok -->
+        <dependency>
+            <groupId>org.projectlombok</groupId>
+            <artifactId>lombok</artifactId>
+            <version>${project-lombok.version}</version>
         </dependency>
 
         <!-- MySQL Driver -->
