--- a/job-tracker/pom.xml
+++ b/job-tracker/pom.xml
@@ -19,6 +19,8 @@
         <mysql-driver.version>9.3.0</mysql-driver.version>
         <google-protobuf.version>4.29.0</google-protobuf.version>
         <project-lombok.version>1.18.38</project-lombok.version>
+        <mockito.version>5.18.0</mockito.version>
+        <argLine/>
     </properties>
 
     <dependencies>
@@ -65,6 +67,12 @@
             <groupId>org.springframework.security</groupId>
             <artifactId>spring-security-test</artifactId>
         </dependency>
+        <dependency>
+            <groupId>org.mockito</groupId>
+            <artifactId>mockito-core</artifactId>
+            <version>${mockito.version}</version>
+            <scope>test</scope>
+        </dependency>
     </dependencies>
 
     <build>
@@ -87,6 +95,24 @@
                             <version>${project-lombok.version}</version>
                         </path>
                     </annotationProcessorPaths>
+                </configuration>
+            </plugin>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-dependency-plugin</artifactId>
+                <executions>
+                    <execution>
+                        <goals>
+                            <goal>properties</goal>
+                        </goals>
+                    </execution>
+                </executions>
+            </plugin>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-surefire-plugin</artifactId>
+                <configuration>
+                    <argLine>@{argLine} -javaagent:${org.mockito:mockito-core:jar}</argLine>
                 </configuration>
             </plugin>
         </plugins>
