--- a/job-tracker/src/main/resources/application.yml
+++ b/job-tracker/src/main/resources/application.yml
@@ -6,3 +6,12 @@ spring:
     username: root
     password: Marine_Soccer9
     driver-class-name: com.mysql.cj.jdbc.Driver
+logging:
+  level:
+    org:
+      springframework:
+        security: DEBUG
+server:
+  error:
+    include-message: always
+    include-binding-errors: always
