--- a/job-tracker/pom.xml
+++ b/job-tracker/pom.xml
@@ -36,6 +36,11 @@
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-security</artifactId>
         </dependency>
+        <!-- Email Sending Support -->
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-mail</artifactId>
+        </dependency>
         <!-- Thymeleaf (ViewResolver used to render static html pages from src/main/resources/templates) -->
         <dependency>
             <groupId>org.springframework.boot</groupId>
