--- a/job-tracker/.gitignore
+++ b/job-tracker/.gitignore
@@ -1,8 +1,9 @@
-HELP.md
+ls lHELP.md
 target/
 .mvn/wrapper/maven-wrapper.jar
 !**/src/main/**/target/
 !**/src/test/**/target/
+src/main/resources/application-secret.yml
 
 ### STS ###
 .apt_generated
