--- a/job-tracker/src/main/resources/application.yml
+++ b/job-tracker/src/main/resources/application.yml
@@ -1,11 +1,25 @@
 spring:
+  config:
+    import:
+      - application-secret.yml
   application:
-    name: job-tracker
+    name: applysync
   datasource:
     url: jdbc:mysql://localhost:3306/jobtrackerdb?useSSL=false&serverTimeZone=America/Chicago
     username: root
-    password: Marine_Soccer9
+    password: ${DB_PASSWORD}
     driver-class-name: com.mysql.cj.jdbc.Driver
+  mail:
+    host: smtp.gmail.com
+    port: 587
+    username: ${MAIL_USERNAME}
+    password: ${MAIL_PASSWORD}
+    properties: 
+      mail:
+        smtp:
+          auth: true
+          starttls:
+            enable: true
 logging:
   level:
     org:
